# klangwunder3000

./: KW3KApp.cpp  Klangset.cpp  Makefile  Makefile.am  Makefile.mac  Makefile.mgw  TODO  configure.ac  klangwunder3000.desktop  klangwunder3000.nsi
debian/: changelog  control  copyright  menu  rules  watch
gui/: FrameMain.cpp  FrameMain.h  MyFrameMain.h  klangwunder3000.wxg
gui/res/: about.png.h  icon.icns  icon.xpm  pause.png.h
src/: KW3KApp.cpp  KW3KApp.h  Klang.cpp  Klang.h  Klangset.cpp  Klangset.h  Makefile.am  dfltcfg.h  ffsndplay.c
src/gui/: FrameMain.cpp  FrameMain.h  MyFrameMain.cpp  MyFrameMain.h  evtids.h  klangwunder3000.wxg
src/gui/res/: add.png.h  info.png.h  klangwunder3000.xpm  play.png.h  remove.png.h  stop.png.h  stopklang.png.h
test/: Jungle Füver.klw  bad.klw  bad2.Klw  empty.KLW
